# CONQUEST_to_VASP

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  a.out  conf.py  config.nix  flake.nix  genindex.html  index.html  index.rst  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.vasp
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 9ryl8q3jnpwrzmjyhj9fzab7rqgfd4p0-source  cc5g5cfkn891i3amx1ycldlmkxq7vrwh-source
.doctrees/: environment.pickle  index.doctree
.doctrees/src/: band.doctree  chden.doctree  conquest.doctree  pdos.doctree  roadmap.doctree  supercell.doctree  types.doctree  writers.doctree
.github/workflows/: documentation.yml  workflow.yml
_sources/: index.rst.txt
_sources/src/: chden.rst.txt  roadmap.rst.txt  supercell.rst.txt  types.rst.txt
conquest2a/: _types.py  band.py  chden.py  conquest.py  constants.py  eigenvalue.py  elements.txt  pdos.py  supercell.py  writers.py
conquest2a/algo/: angles.py  kdtree.py  nn.py
conquest2a/read/: quantities.py  vesta.py
docs/: conf.py  index.rst  requirements.txt
docs/src/: band.rst  chden.rst  conquest.rst  pdos.rst  supercell.rst  writers.rst
examples/: README.md  _play.py  plot_test_band.py  plot_test_pdos.py
nix/: default.nix
nix/editors/vscode/languages/: python.nix
nix/languages/python/: default.nix
src/: band.html  chden.html  conquest.html  conquest.py  main.c  make_supercell.py  pdos.html  roadmap.html  supercell.html  supercell.py  types.html  writers.html  writers.py
test/: test.extxyz  test.vasp  test.xyz
tests/: _play.py  main.py  old  test_conquest.py  test_eigenvalues.py  test_kdtree.py  test_nn.py  test_orig_xsf.xsf  test_supercell.py
tests/data/: test_output.txt  test_output_input_coords.in  test_output_input_coords.xsf  test_vesta_to_conquest.coords  test_vesta_to_conquest.vesta  test_with_spins.xsf
