[project]
name = "c2v"
version = "1.0.0"
authors = [{ name = "Chung", email = "dev.chpxu@outlook.com" }]
description = "A bot to collate rhythm games news, videos and events."
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/chpxu/rhythmington"
Issues = "https://github.com/chpxu/rhythmington/issues"

[tool.pyright]
reportPrivateUsage = false

[tool.mypy]
strict = true
plugins = ["numpy.typing.mypy_plugin"]
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]

disable_error_code = [
  # "abstract",
  # "arg-type",
  # "assignment",
  # "attr-defined",
  # "call-arg",
  "import-not-found",
  # "index",
  # "list-item",
  # "misc",
  # "name-defined",
  # "no-redef",
  # "operator",
  # "override",
  # "return-value",
  # "return",
  # "syntax",
  # "unused-coroutine",
  # "union-attr",
  # "var-annotated",
]
module = ["nest_asyncio.*", "requests.*"]

[tool.black]
line-length = 100
target-version = ['py312']
extend-exclude = '''
(
  ^/_*
  | .*_pb2.py
  | .nix*
)
'''
