[project]
name = "conquest2a"
version = "0.2.0"
authors = [{ name = "Chung", email = "dev.chpxu@outlook.com" }]
description = "A Python utility that deals with some pre- and post-processing functions for the linear scaling DFT program, CONQUEST."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=2.0.0"]
[project.urls]
Homepage = "https://github.com/chpxu/CONQUEST_TO_VASP"
Issues = "https://github.com/chpxu/CONQUEST_TO_VASP/issues"

[tool.pyright]
reportPrivateUsage = false

[tool.mypy]
strict = true
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
disable_error_code = [
  # "abstract",
  # "arg-type",
  # "assignment",
  # "attr-defined",
  # "call-arg",
  "import-not-found",
  # "index",
  # "list-item",
  # "misc",
  # "name-defined",
  # "no-redef",
  # "operator",
  # "override",
  # "return-value",
  # "return",
  # "syntax",
  "unused-ignore",
  # "union-attr",
  # "var-annotated",
]
module = ["nest_asyncio.*", "requests.*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
extend-exclude = '''
(
  ^/_*
  | .*_pb2.py
  | .nix*
  | _nix*
  | tests/*
)
'''

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
sources = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
